<resources>
    <string name="app_name">TicketFinderAndroid</string>
    <string name="fromStation">Станція відправлення</string>
    <string name="tillStation">Станція прибуття</string>
    <string name="timeDepStr">Початкова дата відправлення</string>
    <string name="timeDepEndStr">Кінцева дата відправлення</string>
    <string name="Pstr">Плацкарт</string>
    <string name="P">П</string>
    <string name="K">К</string>
    <string name="Kstr">Купе</string>
    <string name="C1">C1</string>
    <string name="C2">C2</string>
    <string name="firstName">Ім\'я</string>
    <string name="lastName">Прізвище</string>
    <string name="start">Почати пошук</string>
    <string name="lookUp">Переглянути</string>
    <string name="stop">Зупинити</string>
    <string name="openBrowser">Відкрити у браузері</string>
    <string name="success">Квиток знайдено!</string>
    <string name="error">Виникла помилка</string>
    <string name="add">Додати</string>
    <string name="pause">Пауза</string>
    <string name="stud">Студентський</string>

    //errors empty fields
    <string name="emptyStationFrom">Станція відправки відсутня</string>
    <string name="emptyStationTill">Станція прибуття відсутня</string>
    <string name="emptyPlaceType">Виберіть тип місця</string>
    <string name="emptyFirstName">Введіть і\'мя</string>
    <string name="emptyLastName">Введіть прізвище</string>
    <string name="sameStations">Станція відправлення співпадає із станцією прибуття</string>

    //Alert
    <string name="removeDialog">Видалення</string>
    <string name="removeQuestion">Бажаєте видалити елемент?</string>
    <string name="answerYes">Так</string>
    <string name="answerNo">Ні</string>

    //Toast
    <string name="stopFinderMessage">Пошук зупинений</string>
</resources>
